# wasmtime-hs

./: .gitignore  cabal.project  default.nix  hs-wasmtime.cabal  shell.nix  wasmtime-hs.cabal
.github/workflows/: pipeline.yml
cbits/: cbits.c
nix/: cabal-extras.patch  hs4nix.nix  sources.json  wasmtime-c-api.nix  wasmtime-c-api.patch  wasmtime-src.nix
src/: Wasmtime.hs
src/Wasmtime/: ByteVec.hs  Config.hs  Context.hs  Engine.hs  Error.hs  Frame.hs  Functype.hs  Internal.hs  Linker.hs  Memory.hs  Module.hs  Raw.hs  Store.hs  Table.hs  Trap.hs  Valtype.hs  Vec.hs
src/Wasmtime/Raw/: Types.hsc
test/: hello.wat  hs-wasmtime-test.hs  wasmtime-hs-test.hs
util/: watfmt
wasmtime-hs-bindgen/: wasmtime-hs-bindgen.cabal
wasmtime-hs-bindgen/app/: wasmtime-hs-bindgen.hs
