cabal-version:      2.2
name:               wasmtime-hs
version:            0.0.1.0
build-type:         Simple
extra-source-files: test/*.wat

common deps
  build-depends:
    , base
    , bytestring
    , unliftio

  ghc-options:   -Wall

library
  import:           deps
  exposed-modules:
    Wasmtime
    Wasmtime.ByteVec
    Wasmtime.Config
    Wasmtime.Engine
    Wasmtime.Error
    Wasmtime.Frame
    Wasmtime.Functype
    Wasmtime.Linker
    Wasmtime.Module
    Wasmtime.Raw
    Wasmtime.Raw.Types
    Wasmtime.Store
    Wasmtime.Trap
    Wasmtime.Valtype
    Wasmtime.Vec

  extra-libraries:  wasmtime
  hs-source-dirs:   src
  build-depends:
    , mtl
    , vector

  default-language: Haskell2010

test-suite wasmtime-hs-test
  import:           deps
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  autogen-modules:  Paths_wasmtime_hs
  other-modules:    Paths_wasmtime_hs
  main-is:          wasmtime-hs-test.hs
  ghc-options:      -threaded -rtsopts
  build-depends:    wasmtime-hs
  default-language: Haskell2010
